--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -13,6 +13,7 @@
      <input type="text" id="todo-input" placeholder="Enter a todo and press Add or Enter">
 
      <button id="add-btn">Add</button>
+     <ul id="todo-list"></ul>
      <script src="script.js"></script>
 </body>
 </html>
